--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,16 @@ async-timeout==3.0.1
 attrs==20.1.0
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
 idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
 multidict==4.7.6
 pyTelegramBotAPI==3.7.3
 requests==2.24.0
 six==1.15.0
 urllib3==1.25.10
+Werkzeug==1.0.1
 yarl==1.5.1
